final edits to syllabus

--- a/docs/reprosci_syllabus.tex
+++ b/docs/reprosci_syllabus.tex
@@ -24,7 +24,7 @@
 \usepackage[margin=1in]{geometry}
 \usepackage{hyperref}
 \hypersetup{unicode=true,
-            pdftitle={Reproducible Science with R},
+            pdftitle={Reproducible Research with R},
             pdfauthor={Matthew K. Lau},
             pdfborder={0 0 0},
             breaklinks=true}
@@ -73,7 +73,7 @@
 }
 
 \setlength{\droptitle}{-2em}
-  \title{Reproducible Science with R}
+  \title{Reproducible Research with R}
   \pretitle{\vspace{\droptitle}\centering\huge}
   \posttitle{\par}
   \author{Matthew K. Lau}
@@ -93,8 +93,8 @@
 R?}\label{why-make-your-work-reproducible-and-why-r}}
 
 Science is driven by the exchange of information and knowledge. A recent
-study (Stodden \emph{et al.} 2018) demonstrated that only 26\% of
-studies published in the journal \emph{Science} could be reproduced.
+study demonstrated that only 26\% of studies published in the journal
+\emph{Science} could be reproduced (see Stodden \emph{et al.} 2018).
 This was even more striking given that the study was conducted after
 \emph{Science} had instituted its open data policy. Luckily, advances in
 open-source computer languages, such as \textbf{R}, provide a way to
@@ -210,30 +210,26 @@ Conduct outline by the folks at ROpenSci
 (\url{https://ropensci.org/coc}).
 
 \emph{Be considerate and respectiful of each other in speech and
-actions} \emph{Contribute a safe and effective learning experience for
-everyone} \emph{We all get out of this class what we put into it}
+actions}
 
-See more at \url{https://adainitiative.org}
+\emph{Contribute a safe and effective learning experience for everyone}
 
-\hypertarget{possible-advanced-topic-discussions-via-slack}{%
-\subsection{Possible Advanced Topic Discussions via
-Slack}\label{possible-advanced-topic-discussions-via-slack}}
+\emph{We all get out of this class what we put into it}
 
-\begin{itemize}
-\tightlist
-\item
-  Creating \emph{Shiny Apps}
-\item
-  Writing \textbf{R} \emph{packages}
-\item
-  Using \emph{github}
-\item
-  Scientific notebooks with RMarkdown
-\item
-  Identifying code inefficiency with profVis
-\item
-  Data provenance in R
-\end{itemize}
+\hypertarget{advanced-topic-discussions-via-slack-depending-on-interests}{%
+\subsection{Advanced Topic Discussions via Slack (Depending on
+Interests)}\label{advanced-topic-discussions-via-slack-depending-on-interests}}
+
+\emph{RMarkdown}, \emph{dplyr}, \emph{ggplot}, \emph{github},
+\emph{Shiny Apps}, \emph{R packages}, \emph{Code performance with
+profVis}, \emph{Data Provenance in R}
+
+\hypertarget{references}{%
+\subsection{References}\label{references}}
+
+Stodden, V, Seiler, J and Z, Ma (2018) An empirical analysis of journal
+policy effectiveness for computational reproducibility. PNAS 115:
+2584--2589. \url{http://www.pnas.org/content/115/11/2584}
 
 
 \end{document}
